[package]
name = "kvs"
version = "0.1.0"
authors = ["WLBF <lbf1353@live.com>"]
description = "A simple key/value store."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stderrlog = "0.4.3"
log = "0.4.11"
clap = "2.33.3"
sled = "0.34.3"

[dev-dependencies]
assert_cmd = "0.11"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
criterion = "0.3.3"
lazy_static = "1.4.0"

[[bench]]
name = "engine_benches"
harness = false